--- a/css/screen.css
+++ b/css/screen.css
@@ -1,1 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Roboto:wght@300&display=swap');
 
+body
+{
+  background-color: lightblue;
+}
+
+h1
+{
+  text-align: center;
+  font-family: 'Akaya Telivigala', cursive;
+  font-size: 25pt;
+  margin: 35px;
+}
+
+fieldset
+{
+  font-family: 'Roboto', sans-serif;
+  font-size: 15pt;
+  width: 30em;
+  padding: 1em;
+  border-color: transparent;
+}
+
+label
+{
+  padding: 0;
+  font-weight: bold;
+  text-align: center;
+  display: block;
+  width: 90%;
+  margin: 0 1.5%;
+}
+
+input
+{
+  margin:8px 1.5%;
+  width: 90%;
+  border: 1px solid #ccc;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 7pt;
+  padding: 12px 20px;
+  border-radius: 6px;
+  background-color: #808080;
+}
+
+submit
+{
+  font-family: Arial;
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+@media screen and (min-width: 500px)
+{
+  # container
+  {
+    text-align: center;
+    margin: 3% auto 0 auto;
+    width: 95%;
+  }
+  
+  input
+  {
+    width: 100%;
+  }
+  
+  #submit
+  {
+    align-self: center;
+    display: block;
+    margin: 0 auto;
+    font-size: 0.9em;
+  }
+}
+
+@media screen and (min-width: 768px)
+{
+  #container
+  {
+    align-self: center;
+    margin: 3% auto 0 auto;
+    width: 95%;
+  }
+  
+   #submit
+  {
+    width: auto;
+  }
+}
