--- a/css/screen.css
+++ b/css/screen.css
@@ -12,7 +12,7 @@ h1
   text-align: center;
   font-family: 'Akaya Telivigala', cursive;
   font-size: 25pt;
-  margin: 35px;
+  margin: 15px;
 }
 
 fieldset
@@ -60,7 +60,7 @@ submit
   {
     text-align: center;
     margin: 3% auto 0 auto;
-    width: 95%;
+    width: 9%;
   }
   
   input
@@ -75,7 +75,7 @@ submit
   
   #submit
   {
-    align-self: center;
+    text-align: center;
     display: block;
     margin: 0 auto;
     font-size: 15pt;
@@ -86,8 +86,7 @@ submit
 {
   #container
   {
-    align-self: center;
-    margin: 3% auto 0 auto;
+    margin: 3%;
   }
   
   fieldset
