--- a/css/screen.css
+++ b/css/screen.css
@@ -20,7 +20,7 @@ fieldset
   font-family: 'Roboto', sans-serif;
   font-size: 15pt;
   width: 90%;
-  padding: 1em;
+  padding: 5px;
   border-color: transparent;
 }
 
