--- a/css/screen.css
+++ b/css/screen.css
@@ -19,7 +19,7 @@ fieldset
 {
   font-family: 'Roboto', sans-serif;
   font-size: 15pt;
-  width: 90%;
+  width: auto;
   padding: 5px;
   border-color: transparent;
 }
@@ -46,11 +46,9 @@ input
   background-color: #808080;
 }
 
-submit
+.submit
 {
   font-family: Arial;
-  margin-bottom: 1em;
-  margin-top: 1em;
   font-size: 10pt;
 }
 
@@ -60,12 +58,13 @@ submit
   {
     text-align: center;
     margin: 3% auto 0 auto;
-    width: 9%;
+    width: 90%;
   }
   
   input
   {
-    width: 100%;
+    align-self: center;
+    width: auto;
   }
   
   fieldset
@@ -73,7 +72,7 @@ submit
     text-align: center;
   }
   
-  #submit
+  .submit
   {
     text-align: center;
     display: block;
@@ -89,12 +88,7 @@ submit
     margin: 3%;
   }
   
-  fieldset
-  {
-    text-align: center;
-  }
-  
-   #submit
+   .submit
   {
     width: auto;
   }
